--- a/.env
+++ b/.env
@@ -8,13 +8,13 @@
 # ─────────────────────────────────────────────────────────────────
 
 # MongoDB Connection String (Get from MongoDB Atlas or Railway)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database
+MONGODB_URI=mongodb+srv://wasicursor_db_user:ysmmVuFIprIjCMRG@cluster0.bhmz54o.mongodb.net/serfrazz?retryWrites=true&w=majority&appName=Cluster0
 
 # Unique Session ID (Choose any name)
-SESSION_ID=my_bot_session
+SESSION_ID=
 
 # Your WhatsApp Number (with country code, no + or spaces)
-OWNER_NUMBER=263788049675
+OWNER_NUMBER=923042099800
 
 # ─────────────────────────────────────────────────────────────────
 #  OPTIONAL SETTINGS
